# favs-bot

./: .env.example  .gitignore  Justfile  Makefile  README.md  alembic.ini  docker-compose-local.yml  main.py  pyproject.toml
bot/: config.py  main.py
bot/db/: core.py  model_types.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1722188576_d00a442ec5ac_create_users_table.py  1722190058_b0fca6adf5f3_create_wishes_table.py  1722260765_bf34b31737bf_add_created_at_to_users.py  1722260844_a437b2680ce5_add_created_at_and_updated_at_to_wishes.py  1722261314_085a4de99cfa_create_update_wishes_updated_at_trigger.py
bot/db/models/: __init__.py  base.py  user.py  wish.py
