[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
alembic = "^1.13.2"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
